[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fidelity-dl"
version = "1.4.4"
description = "Multi-platform music downloader"
requires-python = ">=3.10"
dependencies = [
    "tidalapi",
    "requests",
    "mutagen",
    "yt-dlp",
    "tidal-wave",
    "cachecontrol",
]

[project.urls]
Homepage = "https://github.com/lev1ll/Fidelity"

[project.scripts]
fidelity = "tidal_dl:main"

[tool.setuptools]
py-modules = ["tidal_dl"]
